fix(#11): little bit fix hero page align

--- a/src/components/sections/hero/hero.module.css
+++ b/src/components/sections/hero/hero.module.css
@@ -36,7 +36,7 @@
 
 .hero_content__proportional {
   grid-template-columns: repeat(2, 1fr);
-  column-gap: 20px;
+  column-gap: 0px;
 }
 
 .hero_title {
@@ -48,6 +48,10 @@
 .hero_description {
   font: var(--body-regular, normal 400 28px/1.3 var(--Manrope));
   max-width: 763px;
+}
+
+.hero__with_bg .hero_description {
+  max-width: none;
 }
 
 @media (width < 1440px) {
